fix(search/result): link covers full dimensions of li

--- a/components/search/result.module.scss
+++ b/components/search/result.module.scss
@@ -7,6 +7,12 @@ $margin: 20px;
 
 .link {
   text-decoration: none;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .listItem {
